_sass/base/_base.scss
html,
body {
  height: 100%;
}

#page-wrap {
  padding-top: $navbar-height + $usa-height;
  padding-bottom: $navbar-height;
  min-height: 100%;
  position: relative;
}

code {
	font-family: "Courier New";
  color: #000;
  background-color: #fff;
  border-radius: 0px;
}

blockquote {
  font-size: 15px;
}

.table-auto {
  width: auto !important;
}

.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
  background-color: rgba(101, 196, 203, 0.5); // 50% of $pale-turquoise
}

ul {
  // Resetting default from 40px
  -webkit-padding-start: 15px;
}

.videoWrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 25px;
  height: 0;
}
.videoWrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.movement-video-wrapper{ 
  margin: 10px 0;
}
.access-tool-here{
  @media screen and (min-width: 720px) {
    float: right;
  }
  margin-bottom: 10px;    
}
.introducing-movement {
  @media screen and (min-width: 720px) {
    display: inline-block;
    margin-top: 6px;
  }
  margin-bottom: 16px;     
}

